<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/travel_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_marginBottom="16dp"
    android:background="@drawable/black_normal_corners">

    <TextView
        android:id="@+id/travel_name"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/invisible_corners"
        android:fontFamily="@font/avenir_next_regular"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/hike_chornomorsky_hrebt"
        android:textSize="15sp"
        app:drawableRightCompat="@drawable/price"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button2"
        android:layout_width="35dp"
        android:layout_height="26dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:contentDescription="@string/more_button"
        android:scaleType="centerInside"
        android:src="@drawable/more"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/chef_icon"
        android:layout_width="54dp"
        android:layout_height="48dp"
        android:layout_below="@+id/travel_name"
        android:contentDescription="@string/chef_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/travel_name"
        app:srcCompat="@drawable/happy_icon" />

    <TextView
        android:id="@+id/chef_name"
        android:fontFamily="@font/avenir_next_regular"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="14dp"
        android:text="@string/name_of_chef"
        app:layout_constraintStart_toEndOf="@+id/chef_icon"
        app:layout_constraintTop_toBottomOf="@+id/travel_name" />

    <ImageView
        android:id="@+id/star_1"
        android:layout_width="19dp"
        android:layout_height="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/half_star_5"
        app:layout_constraintTop_toBottomOf="@+id/travel_name"
        app:srcCompat="@drawable/full_star"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/star_2"
        android:layout_width="19dp"
        android:layout_height="15dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/chef_name"
        app:layout_constraintTop_toBottomOf="@+id/travel_name"
        app:srcCompat="@drawable/full_star"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/star_3"
        android:layout_width="19dp"
        android:layout_height="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/star_4"
        app:layout_constraintTop_toBottomOf="@+id/travel_name"
        app:srcCompat="@drawable/full_star"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/star_4"
        android:layout_width="19dp"
        android:layout_height="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/star_1"
        app:layout_constraintTop_toBottomOf="@+id/travel_name"
        app:srcCompat="@drawable/full_star"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/half_star_5"
        android:layout_width="19dp"
        android:layout_height="15dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/chef_name"
        app:layout_constraintTop_toBottomOf="@+id/travel_name"
        app:srcCompat="@drawable/half_star"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/avenir_next_regular"
        android:text="@string/amount_of_reviews"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/half_star_5"
        app:layout_constraintTop_toBottomOf="@+id/travel_name" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="92dp"
        android:fontFamily="@font/avenir_next_regular"
        android:text="@string/amount_of_hikes"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/travel_name" />

    <TextView
        android:id="@+id/difficulty_text_view"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:fontFamily="@font/avenir_next_regular"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="7dp"
        android:textSize="12sp"
        android:text="@string/difficulty_string"
        app:layout_constraintEnd_toStartOf="@+id/difficulty_type_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chef_icon" />

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="@font/avenir_next_regular"
        android:text="@string/price_label"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toStartOf="@+id/price"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/price"
        android:layout_width="60dp"

        android:layout_height="19dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/avenir_next_regular"
        android:paddingStart="5dp"
        android:text="@string/price"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/difficulty_type_view"
        android:layout_width="wrap_content"
        android:fontFamily="@font/avenir_next_regular"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="17dp"
        android:textSize="12sp"
        android:background="@drawable/difficulty_type_hard"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/difficulty_types_hard"
        app:layout_constraintStart_toEndOf="@+id/difficulty_text_view"
        app:layout_constraintTop_toBottomOf="@+id/chef_name" />

    <TextView
        android:id="@+id/group_type_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="1dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/group_type_mixed"
        android:fontFamily="@font/avenir_next_regular"
        android:paddingStart="5dp"
        android:text="@string/group_type_mixed"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/price_text_view"
        app:layout_constraintStart_toEndOf="@+id/group_type"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/group_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/avenir_next_regular"
        android:text="@string/group_type_string"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/group_type_view"
        app:layout_constraintStart_toEndOf="@+id/difficulty_type_view"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView2"
        android:textSize="12sp"

        android:textColor="@color/black"
        android:fontFamily="@font/avenir_next_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="7dp"
        android:text="@string/date_of_hike_start_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficulty_text_view" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"

        android:layout_height="19dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/avenir_next_regular"
        android:text="16.06.2024 - 26.06.2025 :)"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/difficulty_type_view"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="0dp"
        android:background="@color/shamrock_green"
        android:fontFamily="@font/avenir_next_regular"
        android:gravity="center"
        android:text="ЗАПИТ НА ПРИЄДНАННЯ"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="84dp"

        android:layout_height="19dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="22dp"
        android:fontFamily="@font/avenir_next_regular"
        android:text="Місце збору:"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"

        android:layout_height="19dp"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/avenir_next_regular"
        android:text="Івано-Франківськ"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="1dp"
        android:fontFamily="@font/avenir_next_regular"
        android:text="Тип трансферу:"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/avenir_next_regular"
        android:text="Тільки пальне"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView10"
        android:textSize="12sp"

        android:textColor="@color/black"
        android:fontFamily="@font/avenir_next_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="41dp"
        android:text="Маршрут:"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView12"
        android:textSize="12sp"

        android:textColor="@color/black"
        android:fontFamily="@font/avenir_next_regular"
        android:layout_width="270dp"
        android:layout_height="46dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="3dp"
        android:text="@string/test_road"
        app:layout_constraintEnd_toStartOf="@+id/textView13"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="52dp"

        android:layout_height="23dp"
        android:layout_marginStart="5dp"
        android:alpha="0"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/avenir_next_regular"
        android:text="(25) км"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

</androidx.constraintlayout.widget.ConstraintLayout>